# SoftRender

./: CMakeLists.txt  README.md  todo
res/: box.danny  mesh.danny
src/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Camera.hpp  Colour.cpp  Colour.hpp  Edge.cpp  Edge.hpp  Input.cpp  Input.hpp  MultiArray.hpp  MultiArray.inl  RandTriangleField.cpp  RandTriangleField.hpp  RenderContext.cpp  RenderContext.hpp  StarField.cpp  StarField.hpp  Vec3.cpp  Vec3.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  Window.inl  main.cpp  variables.bat
src/Maths/: Mat3.hpp  Mat3.inl  Mat4.hpp  Mat4f.cpp  Mat4f.hpp  Mat4f.inl  Maths.hpp  MathsTest.hpp  MathsUtils.hpp  Matrices.hpp  Transform.hpp  Transform.inl  Utils.hpp  Vec2.cpp  Vec2.hpp  Vec2.inl  Vec3.cpp  Vec3.hpp  Vec3.inl  Vec4.cpp  Vec4.hpp  Vec4.inl
src/Maths/inline/: Mat3.inl  Transform.inl  Vec2.inl  Vec4.inl
src/Maths/template/: Mat3.hpp  Mat3.inl  Mat3X.hpp  Mat4.hpp  Mat4.inl  Mat4X.hpp  MathsX.hpp  TransformX.hpp  Utils.hpp  Vec2X.hpp  Vec2X.inl  Vec3X.hpp  Vec3X.inl  Vec4X.hpp  Vec4X.inl
src/Maths/template/inline/: Mat3X.inl  Mat4X.inl  TransformX.inl  Utils.inl  Vec2X.inl  Vec3X.inl  Vec4X.inl
src/Messages/: ObserverInput.hpp  Subject.hpp
src/djc_math/: Mat4.hpp  Transform.hpp  Vec4.hpp  djc_math.hpp
src/djc_math/inline/: Mat4.inl  Transform.inl  Utils.inl  Vec3.inl
